--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World
+<!-- index.html -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Welcome to My Website</title>
+  </head>
+  <body>
+    <h1>Hello from Josh!</h1>
+  </body>
+</html>
