--- a/index.html
+++ b/index.html
@@ -1,10 +1,117 @@
-<!-- index.html -->
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Welcome to My Website</title>
-  </head>
-  <body>
-    <h1>Hello from Josh!</h1>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Josh Taylor | Portfolio</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      background-color: #f9f9f9;
+      color: #333;
+    }
+    header {
+      background-color: #004aad;
+      color: white;
+      padding: 40px 20px;
+      text-align: center;
+    }
+    header img {
+      border-radius: 50%;
+      width: 150px;
+      height: 150px;
+      object-fit: cover;
+      margin-bottom: 20px;
+    }
+    .container {
+      padding: 20px;
+      max-width: 1000px;
+      margin: auto;
+    }
+    h2 {
+      border-bottom: 2px solid #ccc;
+      padding-bottom: 10px;
+      margin-top: 40px;
+    }
+    .projects {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+    }
+    .project-card {
+      background: white;
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      padding: 20px;
+      flex: 1 1 300px;
+    }
+    .project-card h3 {
+      margin-top: 0;
+    }
+    .links {
+      margin-top: 40px;
+      text-align: center;
+    }
+    .links a {
+      margin: 0 15px;
+      text-decoration: none;
+      color: #004aad;
+      font-weight: bold;
+    }
+    .icon {
+      width: 24px;
+      height: 24px;
+      vertical-align: middle;
+      margin-right: 8px;
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <img src="headshot.jpg" alt="Josh Taylor Headshot" />
+    <h1>Josh Taylor</h1>
+    <p>Economics & Data Enthusiast | Aspiring Economic Consultant</p>
+  </header>
+
+  <div class="container">
+    <h2>Projects</h2>
+    <div class="projects">
+      <div class="project-card">
+        <h3>NFL Timeout Strategy Analysis</h3>
+        <p>Used nflfastR and Python to evaluate win probability impacts of using a timeout vs. delay of game in key NFL situations.</p>
+        <a href="https://github.com/jooshtay/nfl-timeout-analysis" target="_blank">View on GitHub</a>
+      </div>
+
+      <div class="project-card">
+        <h3>Antitrust Policy Case Study</h3>
+        <p>Analyzed historical antitrust enforcement and its effect on market competition in the tech industry as part of an economic consulting course.</p>
+        <!-- Add a GitHub or PDF link if available -->
+      </div>
+
+      <div class="project-card">
+        <h3>McDonald’s Capstone Pitch</h3>
+        <p>Led a cross-functional team in proposing a product innovation for McDonald's, synthesizing finance, marketing, and operations research.</p>
+      </div>
+    </div>
+
+    <div class="links">
+      <h2>Connect</h2>
+      <a href="https://github.com/jooshtay" target="_blank">
+        <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/github.svg" class="icon" alt="GitHub Icon" />
+        GitHub
+      </a>
+      <a href="https://www.linkedin.com/in/jooshtay/" target="_blank">
+        <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/linkedin.svg" class="icon" alt="LinkedIn Icon" />
+        LinkedIn
+      </a>
+      <a href="resume.pdf" target="_blank">
+        <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/adobeacrobatreader.svg" class="icon" alt="Resume Icon" />
+        Resume
+      </a>
+    </div>
+  </div>
+
+</body>
 </html>
