--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <body>
 
   <header>
-    <img src="headshot.jpg" alt="Josh Taylor Headshot" />
+    <img src="yur.JPG" alt="Josh Taylor Headshot" />
     <h1>Josh Taylor</h1>
     <p>Economics & Data Enthusiast | Aspiring Economic Consultant</p>
   </header>
